# AGV-Simulator-Interface

interface/: CMakeLists.txt  Main.qml  main.cpp
